<resources>
    <string name="app_name">LoLStatistic</string>
    <string name="show_statistic">Показать статистику</string>
    <string name="info_on_enter">Для просмотра статистики выберите сервер и введите имя игрового аккаунта.</string>
    <string name="enter_name">Введите имя</string>
    <string name="all_match">Общее количество игр:</string>
    <string name="win_match">Количество выигрышей:</string>
    <string name="lose_match">Количество проигрышей:</string>
    <string name="go_to_enter_fragment">Выйти в начало</string>
    <string name="pik_Server">Выберите сервеер</string>
    <string name="kills">Убийств:</string>
    <string name="assists">Помощи:</string>
    <string name="deaths">Смертей:</string>
    <string name="zero">0</string>
    <string name="game_mode">Режим игры:</string>
    <string name="your_champion">Ваш чемпион:</string>
    <string name="line">Линия:</string>
    <string name="count_kill_of_dragon">Количесто убийств драконов:</string>
    <string name="count_of_double_kills">Количесто двойных убийств:</string>
    <string name="id">ID</string>
    <string name="test_name">Crazy Father</string>
</resources>